--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1182,6 +1182,20 @@ section {
   background: #ef7f4d;
 }
 
+.contact .php-email-form button[type=reset] {
+  background: #a09d9c;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.contact .php-email-form button[type=reset]:hover {
+  background: #d8d7d6;
+}
+
+
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0deg);
